fixed grid being too big

--- a/frontend-app/src/styles/components/main-content/home/project/project.css
+++ b/frontend-app/src/styles/components/main-content/home/project/project.css
@@ -1,35 +1,35 @@
 .project-component-card {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  /* padding-left: 10px; */
-  /* padding-right: 10px; */
-  padding-bottom: 5px;
+  grid-template-columns: 3fr 7fr;
+  grid-auto-rows: min-content;
+  /* padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px; */
   column-gap: 10px;
   border: 1px solid #fff;
   border-radius: 8px;
 }
 
 .title-bar {
-  margin-top: 10px;
+  margin-top: 1rem;
   padding-bottom: 10px;
   padding-left: 1rem;
   font-weight: 300;
   font-size: 35px;
-  grid-column: 1 / 4;
+  grid-column: 1 / 3;
   grid-row: 1 / 2;
-  display: flex;
-  justify-content: center;
+  /* display: flex; */
+  justify-content: left;
   align-items: center;
-  border-bottom: 1px double #ffffff;
+  /* border-bottom: 1px double #ffffff; */
 }
 
 
 .project-link {
   border: 3px solid #000;
   border-radius: 8px;
-  padding: 4px 2px;
-  display: inline;
+  padding: 4px 2px; 
+  display: inline; 
   color: var(--primary-color);
   text-decoration: none;
   transition: background-color 0.3s ease, text-decoration 0.2s ease;
@@ -42,8 +42,8 @@
 }
 
 .tech-stack {
-  /* padding-left: 10px;
-  padding-top: 10px; */
+  padding-left: 1rem;
+  padding-top: 10px;
   color: var(--grey-font-color);
   /* font-weight: 300; */
   grid-column: 1 / 2;
@@ -51,8 +51,7 @@
 }
 
 .tech-stack-icon {
-  height: 10px;
-  width: 10px;
+  padding: 5px;
 }
 
 .project-details {
@@ -62,3 +61,22 @@
   grid-column: 2 / 4;
   grid-row: 2 / 3;   
 }
+
+/* .test-grid {
+  display: grid;
+  grid-template-columns: 3fr 7fr;
+  grid-template-rows: repeat(2, 1fr);
+  padding-bottom: 5px;
+  column-gap: 10px;
+  border: 1px solid #fff;
+  border-radius: 8px;
+}
+
+.test-row1 {
+  grid-column: 1/4;
+  grid-row: 1/2;
+}
+
+.test-row2 {
+
+} */
