--- a/frontend-app/src/styles/components/main-content/home/projects.css
+++ b/frontend-app/src/styles/components/main-content/home/projects.css
@@ -12,6 +12,7 @@
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: min-content;
   width: 100%;
   max-width: 600px;
   margin: 0 auto;
